updates to include the ability to assign staff to an appointment
